# perphil

./: .gitignore  .mypy.ini  pyproject.toml
.github/workflows/: checks-and-linters.yml  create-tags-on-release-pr.yml  pre-commit-auto-update.yml  publish-to-pypi.yml  tests.yml
notebooks/: conforming-galerkin-fem-operator-splitting-2D-perphil.ipynb  conforming-galerkin-fem-operator-splitting-2D-perphil.py  petsc-profiling-time-benchmarks.ipynb  petsc-profiling-time-benchmarks.py
notebooks/results-conforming-2d/petsc_profiling/: petsc_perf_breakdown.csv
src/perphil/experiments/: iterative_bench.py  petsc_profiling.py
src/perphil/solvers/: parameters.py
